Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,60 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Công an vào cuộc vụ nhóm người hành hung nữ nhân viên trạm y tế xã",
+    "content": "Vụ việc xảy ra tại Trạm y tế xã Kon Thụp, huyện Mang Yang, Gia Lai, khi một nữ nhân viên trạm y tế bị hành hung bởi nhóm người sau khi xảy ra mâu thuẫn trong quá trình sơ cứu cho một bệnh nhân. Sau khi bị đánh, nữ nhân viên đã phải nhập viện điều trị. Chồng của nữ nhân viên sau đó cũng đã tìm nhóm người này để đánh trả, dẫn đến việc cả hai bên đều bị thương. Công an tỉnh Gia Lai đã vào cuộc điều tra và khẩn trương thu thập chứng cứ để xử lý vụ việc theo quy định pháp luật.",
+    "link": "https://tuoitre.vn/cong-an-vao-cuoc-vu-nhom-nguoi-hanh-hung-nu-nhan-vien-tram-y-te-xa-20250313150327563.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Vụ hành hung nữ nhân viên y tế tại Gia Lai diễn ra như thế nào?",
+    "answers": [
+      {
+        "text": "Một nhóm người hành hung nữ nhân viên trạm y tế sau khi xảy ra mâu thuẫn.",
+        "correct": true
+      },
+      {
+        "text": "Một nhóm người đã giúp đỡ nữ nhân viên trạm y tế.",
+        "correct": false
+      },
+      {
+        "text": "Nữ nhân viên trạm y tế đã tự gây thương tích cho mình.",
+        "correct": false
+      },
+      {
+        "text": "Công an đã giải quyết ngay vụ việc mà không cần điều tra.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Việt Nam và Singapore hợp tác nâng cao năng lực quản lý thị trường vốn và tài sản số",
+    "content": "Việt Nam và Singapore đã ký Ý định thư hợp tác (LOI) nhằm nâng cao năng lực quản lý và giám sát thị trường vốn cũng như tài sản số. Sự kiện này được diễn ra dưới sự chứng kiến của Thủ tướng Singapore Lawrence Wong và Tổng Bí thư Tô Lâm. Hai bên sẽ chia sẻ thông tin và kinh nghiệm trong việc xây dựng khung pháp lý cho tài sản số, nhằm bảo vệ tính toàn vẹn và ổn định của thị trường vốn của cả hai quốc gia.",
+    "link": "https://tuoitre.vn/viet-nam-va-singapore-hop-tac-nang-cao-nang-luc-quan-ly-thi-truong-von-va-tai-san-so-2025031313364706.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam và Singapore đã ký gì để hợp tác trong quản lý thị trường vốn?",
+    "answers": [
+      {
+        "text": "Ý định thư hợp tác (LOI)",
+        "correct": true
+      },
+      {
+        "text": "Hiệp định thương mại tự do",
+        "correct": false
+      },
+      {
+        "text": "Thỏa thuận đầu tư",
+        "correct": false
+      },
+      {
+        "text": "Biên bản ghi nhớ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "3 tỉnh Nam Trung Bộ kiến nghị Thủ tướng tháo gỡ 'điểm nghẽn' để tăng trưởng",
     "content": "Ba tỉnh Nam Trung Bộ, gồm Bình Định, Phú Yên và Khánh Hòa, đã kiến nghị Thủ tướng tháo gỡ những điểm nghẽn trong phát triển kinh tế để đạt được mức tăng trưởng cao hơn vào năm 2025. Tại cuộc họp, các tỉnh đã đặt ra các mục tiêu tăng trưởng GDP lần lượt là 10,5% cho Khánh Hòa, 8,5-9% cho Bình Định, và 8% cho Phú Yên. Tuy nhiên, họ cũng nhận thấy cần cải cách thể chế và đơn giản hóa thủ tục hành chính để thu hút đầu tư và phát triển bền vững.",
     "link": "https://tuoitre.vn/3-tinh-nam-trung-bo-kien-nghi-thu-tuong-thao-go-diem-nghen-de-tang-truong-20250313152102437.htm",
@@ -2536,33 +2590,6 @@
     ]
   },
   {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -2589,6 +2616,33 @@
       },
       {
         "text": "150 ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -2791,28 +2845,32 @@
     ]
   },
   {
-    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
-    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
-    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
+    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
+    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
+    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
+    "cat": "suc-khoe",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
     "answers": [
       {
-        "text": "Người đi xe máy",
+        "text": "97 tuổi",
         "correct": true
       },
       {
-        "text": "Người lái ôtô",
+        "text": "90 tuổi",
         "correct": false
       },
       {
-        "text": "Không ai phải bồi thường",
+        "text": "85 tuổi",
         "correct": false
       },
       {
-        "text": "Cả hai bên đều phải bồi thường",
+        "text": "100 tuổi",
+        "correct": false
+      },
+      {
+        "text": "92 tuổi",
         "correct": false
       }
     ]
@@ -2845,32 +2903,28 @@
     ]
   },
   {
-    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
-    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
-    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
-    "cat": "suc-khoe",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
+    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
+    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
+    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
     "answers": [
       {
-        "text": "97 tuổi",
+        "text": "Người đi xe máy",
         "correct": true
       },
       {
-        "text": "90 tuổi",
+        "text": "Người lái ôtô",
         "correct": false
       },
       {
-        "text": "85 tuổi",
+        "text": "Không ai phải bồi thường",
         "correct": false
       },
       {
-        "text": "100 tuổi",
-        "correct": false
-      },
-      {
-        "text": "92 tuổi",
+        "text": "Cả hai bên đều phải bồi thường",
         "correct": false
       }
     ]
