--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Ôtô 5 chỗ tông 7 xe máy",
+    "content": "Vào chiều 13/3, một chiếc ôtô 5 chỗ đã lao vào sân nhà dân ở xã Nghi Ân, TP Vinh, Nghệ An, gây hư hỏng cho 7 xe máy đang đỗ tại đó. Tai nạn xảy ra khi chủ nhà đang tổ chức đám giỗ, nhưng may mắn không có thiệt hại về người. Tài xế ôtô bị choáng váng nhẹ và hiện đang làm việc với công an để điều tra nguyên nhân cũng như bàn bạc đền bù thiệt hại cho các chủ xe máy.",
+    "link": "https://vnexpress.net/oto-5-cho-tong-7-xe-may-4860974.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Vụ tai nạn ôtô 5 chỗ tông 7 xe máy xảy ra ở đâu?",
+    "answers": [
+      {
+        "text": "Nghệ An",
+        "correct": true
+      },
+      {
+        "text": "Hà Nội",
+        "correct": false
+      },
+      {
+        "text": "TP Hồ Chí Minh",
+        "correct": false
+      },
+      {
+        "text": "Đà Nẵng",
+        "correct": false
+      },
+      {
+        "text": "Cần Thơ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lo ngại xuất khẩu chậm lại, chuyên gia đề xuất Việt Nam tìm động lực tăng trưởng mới",
     "content": "Bài viết nêu rõ lo ngại về việc xuất khẩu của Việt Nam chậm lại, với các chuyên gia nhấn mạnh rằng chỉ dựa vào xuất khẩu và sản xuất sẽ không đủ để đạt mức tăng trưởng kinh tế 8%. Các ngành xuất khẩu chủ chốt đang chịu ảnh hưởng bởi biến động toàn cầu, khi xuất khẩu cần được thúc đẩy thông qua đầu tư công và công nghệ cao. Để đạt được mục tiêu tăng trưởng, Việt Nam cần mở rộng chính sách thu hút đầu tư nước ngoài và phát triển tiêu dùng nội địa.",
     "link": "https://tuoitre.vn/lo-ngai-xuat-khau-cham-lai-chuyen-gia-de-xuat-viet-nam-tim-dong-luc-tang-truong-moi-2025031314561708.htm",
@@ -1128,37 +1159,6 @@
     ]
   },
   {
-    "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
-    "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
-    "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' có mục đích gì?",
-    "answers": [
-      {
-        "text": "Tuyên truyền sử dụng điện tiết kiệm, an toàn và đúng cách",
-        "correct": true
-      },
-      {
-        "text": "Khuyến khích sử dụng điện một cách tự do",
-        "correct": false
-      },
-      {
-        "text": "Thiết lập quy định mới về sử dụng điện",
-        "correct": false
-      },
-      {
-        "text": "Đánh giá chất lượng điện năng",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức hội thảo về điện năng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Suzuki Swift sắp trở lại Việt Nam, nhập khẩu Nhật Bản",
     "content": "Mẫu xe Suzuki Swift thế hệ thứ 4 sẽ trở lại thị trường Việt Nam và được nhập khẩu trực tiếp từ Nhật Bản, dự kiến ra mắt vào cuối quý II năm 2025. Các đại lý hiện đang nhận cọc từ khách hàng và xe đã về cảng để làm thủ tục thông quan. So với phiên bản trước, Swift mới có một số cải tiến về thiết kế, đặc biệt là khoang lái, mặc dù kích thước tổng thể gần như không thay đổi.",
     "link": "https://vnexpress.net/suzuki-swift-sap-tro-lai-viet-nam-nhap-khau-nhat-ban-4860834.html",
@@ -1185,6 +1185,37 @@
       },
       {
         "text": "Đầu quý IV năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
+    "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
+    "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' có mục đích gì?",
+    "answers": [
+      {
+        "text": "Tuyên truyền sử dụng điện tiết kiệm, an toàn và đúng cách",
+        "correct": true
+      },
+      {
+        "text": "Khuyến khích sử dụng điện một cách tự do",
+        "correct": false
+      },
+      {
+        "text": "Thiết lập quy định mới về sử dụng điện",
+        "correct": false
+      },
+      {
+        "text": "Đánh giá chất lượng điện năng",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức hội thảo về điện năng",
         "correct": false
       }
     ]
@@ -1356,33 +1387,6 @@
     ]
   },
   {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
-    "answers": [
-      {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
-        "correct": true
-      },
-      {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
-        "correct": false
-      },
-      {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làm thế nào nhận biết rối loạn tiền đình?",
     "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
     "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
@@ -1405,6 +1409,33 @@
       },
       {
         "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
+    "answers": [
+      {
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "correct": true
+      },
+      {
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "correct": false
+      },
+      {
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
@@ -3025,33 +3056,6 @@
     ]
   },
   {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -3078,6 +3082,33 @@
       },
       {
         "text": "150 ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -3280,28 +3311,28 @@
     ]
   },
   {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
+    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
+    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
+    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
+    "cat": "phap-luat",
+    "positivity": 4,
     "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
     "answers": [
       {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "text": "Người đi xe máy",
         "correct": true
       },
       {
-        "text": "Vì không thích tập luyện",
+        "text": "Người lái ôtô",
         "correct": false
       },
       {
-        "text": "Vì sức khỏe không tốt",
+        "text": "Không ai phải bồi thường",
         "correct": false
       },
       {
-        "text": "Vì muốn tiết kiệm tiền",
+        "text": "Cả hai bên đều phải bồi thường",
         "correct": false
       }
     ]
@@ -3338,28 +3369,28 @@
     ]
   },
   {
-    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
-    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
-    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
-    "cat": "phap-luat",
-    "positivity": 4,
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
     "importance": 7,
-    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
     "answers": [
       {
-        "text": "Người đi xe máy",
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
         "correct": true
       },
       {
-        "text": "Người lái ôtô",
+        "text": "Vì không thích tập luyện",
         "correct": false
       },
       {
-        "text": "Không ai phải bồi thường",
+        "text": "Vì sức khỏe không tốt",
         "correct": false
       },
       {
-        "text": "Cả hai bên đều phải bồi thường",
+        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -4261,6 +4292,33 @@
     ]
   },
   {
+    "title": "Người bệnh suy giáp nên giảm cân thế nào",
+    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
+    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
+    "answers": [
+      {
+        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn thịt đỏ.",
+        "correct": false
+      },
+      {
+        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
+        "correct": false
+      },
+      {
+        "text": "Tránh ăn rau quả hoàn toàn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -4287,33 +4345,6 @@
       },
       {
         "text": "Vấn đề tâm lý",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người bệnh suy giáp nên giảm cân thế nào",
-    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
-    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
-    "answers": [
-      {
-        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn thịt đỏ.",
-        "correct": false
-      },
-      {
-        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
-        "correct": false
-      },
-      {
-        "text": "Tránh ăn rau quả hoàn toàn.",
         "correct": false
       }
     ]
