--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,91 @@
     */
     const newsData = [
   {
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "answers": [
+      {
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "correct": true
+      },
+      {
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đủ điều kiện tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
+    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
+    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
+    "answers": [
+      {
+        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
+        "correct": true
+      },
+      {
+        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
+        "correct": false
+      },
+      {
+        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
+        "correct": false
+      },
+      {
+        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khách đứng tiểu vào nồi lẩu, Haidilao đền tiền gấp 10 lần cho 4.000 người",
+    "content": "Một sự cố gây sốc đã xảy ra tại một nhà hàng Haidilao ở Thượng Hải, Trung Quốc khi một thực khách đứng tiểu vào nồi lẩu đang sôi. Đoạn video ghi lại hành động này đã lan truyền trên mạng xã hội và gây ra sự phẫn nộ trong cộng đồng. Để đối phó với tình huống này, Haidilao đã quyết định hoàn lại tiền cho hơn 4.000 khách hàng có đơn hàng liên quan và bồi thường gấp 10 lần số tiền của họ. Hai thiếu niên thực hiện hành vi này đã bị tạm giữ bởi cảnh sát.",
+    "link": "https://tuoitre.vn/khach-dung-tieu-vao-noi-lau-haidilao-den-tien-gap-10-lan-cho-4-000-nguoi-20250313171455249.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Haidilao đã quyết định bồi thường như thế nào sau sự cố khách đứng tiểu vào nồi lẩu?",
+    "answers": [
+      {
+        "text": "Haidilao hoàn lại tiền gấp 10 lần cho khách hàng",
+        "correct": true
+      },
+      {
+        "text": "Haidilao không bồi thường gì",
+        "correct": false
+      },
+      {
+        "text": "Haidilao chỉ bồi thường một nửa số tiền",
+        "correct": false
+      },
+      {
+        "text": "Haidilao tặng phiếu giảm giá cho khách hàng",
+        "correct": false
+      },
+      {
+        "text": "Haidilao đóng cửa nhà hàng ở Thượng Hải",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đối thủ của Việt Nam triệu tập lão tướng từng đá La Liga",
     "content": "Đội tuyển Malaysia đã công bố danh sách cầu thủ triệu tập cho vòng loại cuối Asian Cup 2027, trong đó có sự xuất hiện bất ngờ của tiền vệ 39 tuổi Natxo Insa. Insa, người có kinh nghiệm thi đấu tại La Liga, đã thi đấu cho CLB Johor Darul Tazim ở Malaysia từ năm 2017. Dưới sự dẫn dắt của HLV Peter Cklamovski, đội tuyển Malaysia cũng chào đón sự trở lại của tiền đạo Faisal Halim sau chấn thương nặng.",
     "link": "https://vnexpress.net/doi-thu-cua-viet-nam-trieu-tap-lao-tuong-tung-da-la-liga-4861024.html",
@@ -3365,6 +3450,33 @@
     ]
   },
   {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -3391,33 +3503,6 @@
       },
       {
         "text": "150 ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -3620,28 +3705,32 @@
     ]
   },
   {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
+    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
+    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
     "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
     "answers": [
       {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "text": "97 tuổi",
         "correct": true
       },
       {
-        "text": "Vì không thích tập luyện",
+        "text": "90 tuổi",
         "correct": false
       },
       {
-        "text": "Vì sức khỏe không tốt",
+        "text": "85 tuổi",
         "correct": false
       },
       {
-        "text": "Vì muốn tiết kiệm tiền",
+        "text": "100 tuổi",
+        "correct": false
+      },
+      {
+        "text": "92 tuổi",
         "correct": false
       }
     ]
@@ -3674,32 +3763,28 @@
     ]
   },
   {
-    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
-    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
-    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
     "cat": "suc-khoe",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
     "answers": [
       {
-        "text": "97 tuổi",
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
         "correct": true
       },
       {
-        "text": "90 tuổi",
+        "text": "Vì không thích tập luyện",
         "correct": false
       },
       {
-        "text": "85 tuổi",
+        "text": "Vì sức khỏe không tốt",
         "correct": false
       },
       {
-        "text": "100 tuổi",
-        "correct": false
-      },
-      {
-        "text": "92 tuổi",
+        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -4574,6 +4659,37 @@
     ]
   },
   {
+    "title": "9 năm vô sinh do không có tinh trùng",
+    "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
+    "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Nguyên nhân nào khiến anh Yeo vô sinh trong 9 năm qua?",
+    "answers": [
+      {
+        "text": "Không có tinh trùng do teo tinh hoàn",
+        "correct": true
+      },
+      {
+        "text": "Bị bệnh quai bị",
+        "correct": false
+      },
+      {
+        "text": "Thiếu dinh dưỡng",
+        "correct": false
+      },
+      {
+        "text": "Mắc bệnh tiểu đường",
+        "correct": false
+      },
+      {
+        "text": "Vấn đề tâm lý",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người bệnh suy giáp nên giảm cân thế nào",
     "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
     "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
@@ -4623,37 +4739,6 @@
       },
       {
         "text": "Có, nhưng chỉ ăn trứng sống.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "9 năm vô sinh do không có tinh trùng",
-    "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
-    "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Nguyên nhân nào khiến anh Yeo vô sinh trong 9 năm qua?",
-    "answers": [
-      {
-        "text": "Không có tinh trùng do teo tinh hoàn",
-        "correct": true
-      },
-      {
-        "text": "Bị bệnh quai bị",
-        "correct": false
-      },
-      {
-        "text": "Thiếu dinh dưỡng",
-        "correct": false
-      },
-      {
-        "text": "Mắc bệnh tiểu đường",
-        "correct": false
-      },
-      {
-        "text": "Vấn đề tâm lý",
         "correct": false
       }
     ]
@@ -4820,33 +4905,6 @@
       },
       {
         "text": "Đại học Ngoại thương",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 điều nên làm trước khi ngủ để cân bằng huyết áp",
-    "content": "Bài viết nêu rõ năm điều nên làm trước khi ngủ để giúp cân bằng huyết áp, bao gồm: hạn chế uống rượu, sử dụng thuốc theo chỉ định, thư giãn, tránh thực phẩm nhiều natri và giữ phòng ngủ mát mẻ. Những thói quen này không chỉ giúp hạ huyết áp mà còn giảm nguy cơ mắc các bệnh tim mạch và đột quỵ. Việc tạo dựng thói quen lành mạnh trước khi đi ngủ sẽ hỗ trợ cho sức khỏe tim mạch và giấc ngủ tốt hơn.",
-    "link": "https://vnexpress.net/5-dieu-nen-lam-truoc-khi-ngu-de-can-bang-huyet-ap-4860190.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Có những điều gì nên làm trước khi ngủ để cân bằng huyết áp?",
-    "answers": [
-      {
-        "text": "Hạn chế uống rượu, dùng thuốc theo chỉ định, thư giãn, tránh thực phẩm nhiều natri và giữ phòng ngủ mát mẻ.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ uống trà và không ăn gì trước khi ngủ.",
-        "correct": false
-      },
-      {
-        "text": "Đi ngủ muộn và ăn nhiều đồ ngọt.",
-        "correct": false
-      },
-      {
-        "text": "Tập thể dục cường độ cao trước khi ngủ.",
         "correct": false
       }
     ]
