Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,28 +81,28 @@
     // Example JSON array with news objects
     const newsData = [
   {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "title": "Nhà ga T3 Tân Sơn Nhất vốn 11.000 tỉ hoạt động chính thức phải sau dịp 30-4 và 1-5",
+    "content": "Nhà ga hành khách quốc nội T3 tại cảng hàng không Tân Sơn Nhất sẽ bắt đầu thử nghiệm vận hành nhưng chính thức khai thác từ sau dịp lễ 30-4 và 1-5-2025. Dự án có tổng vốn đầu tư gần 11.000 tỉ đồng và được thiết kế hiện đại với khả năng phục vụ hơn 20 triệu hành khách mỗi năm. Hiện tại, một số chuyến bay nội địa sẽ được khai thác tại nhà ga này trong giai đoạn thử nghiệm trước khi chính thức mở cửa.",
+    "link": "https://tuoitre.vn/nha-ga-t3-tan-son-nhat-von-11-000-ti-hoat-dong-chinh-thuc-phai-sau-dip-30-4-va-1-5-20250313173016149.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Khi nào nhà ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
     "answers": [
       {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "text": "Sau dịp 30-4 và 1-5-2025",
         "correct": true
       },
       {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "text": "Từ ngày 5-5-2025",
         "correct": false
       },
       {
-        "text": "Vì ông không đủ điều kiện tài chính",
+        "text": "Ngay sau khi thử nghiệm xong",
         "correct": false
       },
       {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "text": "Từ đầu tháng 6-2025",
         "correct": false
       }
     ]
@@ -130,6 +130,33 @@
       },
       {
         "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "answers": [
+      {
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "correct": true
+      },
+      {
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đủ điều kiện tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
