Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -525,6 +525,33 @@
     ]
   },
   {
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "answers": [
+      {
+        "text": "Bank Negara Indonesia (BNI)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Trung ương Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Phát triển Châu Á",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
     "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
     "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
@@ -1862,28 +1889,28 @@
     ]
   },
   {
-    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
-    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
-    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
     "answers": [
       {
-        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
         "correct": true
       },
       {
-        "text": "Uống thuốc tự điều trị tại nhà.",
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
         "correct": false
       },
       {
-        "text": "Thực hiện bài tập thể dục hàng ngày.",
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
         "correct": false
       },
       {
-        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
@@ -1920,28 +1947,28 @@
     ]
   },
   {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
+    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
+    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
     "answers": [
       {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
         "correct": true
       },
       {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "text": "Uống thuốc tự điều trị tại nhà.",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "text": "Thực hiện bài tập thể dục hàng ngày.",
         "correct": false
       },
       {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
         "correct": false
       }
     ]
