Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Việt kiều Hà Lan chia tay U17 Việt Nam",
+    "content": "Thomas Mai Veeren, một cầu thủ Việt kiều Hà Lan, đã chia tay đội U17 Việt Nam trong đợt rút gọn danh sách đầu tiên của đội. HLV Cristiano Roland đã loại Mai Veeren cùng với ba cầu thủ khác, trong đó có thủ môn Lý Xuân Hòa. Mặc dù thể hiện tiềm năng, nhưng HLV Roland cho rằng Mai Veeren cần thêm thời gian để hòa nhập. Trước đó, cầu thủ này đã có sự nghiệp bóng đá trẻ tại Hà Lan và được kỳ vọng sẽ phát triển trong tương lai.",
+    "link": "https://vnexpress.net/viet-kieu-ha-lan-chia-tay-u17-viet-nam-4861044.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Tại sao Thomas Mai Veeren chia tay U17 Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì anh cần thêm thời gian hòa nhập.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh không có tài năng.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh được chọn vào đội hình chính.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh đã quyết định từ bỏ bóng đá.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá cà phê trong nước, thế giới cùng quay đầu giảm",
     "content": "Giá cà phê trong nước và thế giới đã đồng loạt giảm sau khi tăng mạnh vào ngày 12-3. Cụ thể, giá cà phê nhân trong nước hiện dao động từ 131.000 - 133.100 đồng/kg, giảm khoảng 8.000 - 1.200 đồng/kg so với ngày trước đó. Trên thị trường thế giới, giá cà phê Robusta và Arabica cũng ghi nhận xu hướng giảm. Nhiều nông dân vẫn đang có lãi lớn, nhưng lo ngại về thời tiết và dịch bệnh có thể ảnh hưởng đến sản lượng cà phê trong tương lai.",
     "link": "https://tuoitre.vn/gia-ca-phe-trong-nuoc-the-gioi-cung-quay-dau-giam-20250313165017318.htm",
@@ -202,6 +229,33 @@
     ]
   },
   {
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "answers": [
+      {
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "correct": true
+      },
+      {
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đủ điều kiện tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
     "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
     "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
@@ -251,33 +305,6 @@
       },
       {
         "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
-    "answers": [
-      {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
-        "correct": true
-      },
-      {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
-        "correct": false
-      },
-      {
-        "text": "Vì ông không đủ điều kiện tài chính",
-        "correct": false
-      },
-      {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
