Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Thủ môn Đình Triệu đau lưng, Bùi Hoàng Việt Anh rời tuyển Việt Nam",
+    "content": "Đội tuyển Việt Nam đang gặp khó khăn về nhân sự khi thủ môn Nguyễn Đình Triệu bị đau lưng và trung vệ Bùi Hoàng Việt Anh tái phát chấn thương đầu gối. Do đó, Bùi Hoàng Việt Anh đã trở về CLB và HLV Kim Sang-sik quyết định gọi bổ sung thủ môn Trịnh Xuân Hoàng từ Thanh Hoá. Đình Triệu sẽ được chụp MRI vào ngày 14/3 để đánh giá mức độ chấn thương của mình.",
+    "link": "https://vnexpress.net/thu-mon-dinh-trieu-dau-lung-bui-hoang-viet-anh-roi-tuyen-viet-nam-4861043.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Bùi Hoàng Việt Anh rời tuyển Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì tái phát chấn thương đầu gối.",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện.",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn về nhà.",
+        "correct": false
+      },
+      {
+        "text": "Vì bị ốm.",
+        "correct": false
+      },
+      {
+        "text": "Vì không được triệu tập.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Việt kiều Hà Lan chia tay U17 Việt Nam",
     "content": "Thomas Mai Veeren, một cầu thủ Việt kiều Hà Lan, đã chia tay đội U17 Việt Nam trong đợt rút gọn danh sách đầu tiên của đội. HLV Cristiano Roland đã loại Mai Veeren cùng với ba cầu thủ khác, trong đó có thủ môn Lý Xuân Hòa. Mặc dù thể hiện tiềm năng, nhưng HLV Roland cho rằng Mai Veeren cần thêm thời gian để hòa nhập. Trước đó, cầu thủ này đã có sự nghiệp bóng đá trẻ tại Hà Lan và được kỳ vọng sẽ phát triển trong tương lai.",
     "link": "https://vnexpress.net/viet-kieu-ha-lan-chia-tay-u17-viet-nam-4861044.html",
@@ -162,33 +193,6 @@
     ]
   },
   {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
-    "answers": [
-      {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
-        "correct": true
-      },
-      {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
-        "correct": false
-      },
-      {
-        "text": "Vì ông không đủ điều kiện tài chính",
-        "correct": false
-      },
-      {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
     "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
     "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
@@ -238,6 +242,33 @@
       },
       {
         "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "answers": [
+      {
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "correct": true
+      },
+      {
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đủ điều kiện tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
@@ -2971,6 +3002,33 @@
     ]
   },
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -2997,33 +3055,6 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -3477,6 +3508,33 @@
     ]
   },
   {
+    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
+    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
+    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập luyện",
+        "correct": false
+      },
+      {
+        "text": "Vì sức khỏe không tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -3503,33 +3561,6 @@
       },
       {
         "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
-    "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
-    "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao chị Ánh quyết định bỏ tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị PT chèo kéo mua thực phẩm chức năng",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập luyện",
-        "correct": false
-      },
-      {
-        "text": "Vì sức khỏe không tốt",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tiết kiệm tiền",
         "correct": false
       }
     ]
@@ -4372,33 +4403,6 @@
       },
       {
         "text": "Vì chính sách thu hút đầu tư của Bình Thuận không tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nhiều người Hàn Quốc ra biển tìm vàng khi giá vàng tăng cao",
-    "content": "Nhiều người Hàn Quốc đang đổ xô ra biển để tìm vàng, đặc biệt là sau khi giá vàng trong nước tăng cao. Họ thường sử dụng máy dò kim loại hoặc lưới kim loại để đãi cát, hy vọng tìm thấy trang sức vàng mà khách du lịch bỏ quên. Tuy nhiên, cảnh sát khuyến cáo mọi người cần thận trọng khi ra biển tìm vàng, nhất là trong bối cảnh có những vụ việc liên quan đến trộm cắp tài sản.",
-    "link": "https://tuoitre.vn/nhieu-nguoi-han-quoc-ra-bien-tim-vang-khi-gia-vang-tang-cao-20250312143448109.htm",
-    "cat": "kinh-doanh",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Tại sao nhiều người Hàn Quốc ra biển tìm vàng gần đây?",
-    "answers": [
-      {
-        "text": "Vì giá vàng tăng cao.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ muốn tìm trang sức bằng bạc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ thích hoạt động ngoài trời.",
-        "correct": false
-      },
-      {
-        "text": "Vì có nhiều sự kiện thể thao diễn ra.",
         "correct": false
       }
     ]
